apps/fm-app/k8s/overlays/local/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fm-app
  namespace: prod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: fm-app
    spec:
      containers:
        - name: fm-app
          image: 'fm_app:5.3'
        - name: fm-app-celery
          image: 'fm_app:5.3'
