apps/fm-app/k8s/overlays/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fm-app-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: web.local
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: fm-app-svc
            port:
              number: 8080
